# 7T_BIDS_organiser

./: .gitignore  .gitmodules  DcmSourcedata_to_NiftiRawdata.sh  DcmSourcedata_to_NiftiRawdata_generate_Dicominfo.sh  LICENSE  README.md  download_docker.sh  example_heuristic.py  modify_fmap.py  modify_func.py  pipeline_conf.json  requirements.txt  setup.cfg  slice_timing_snippet.py
python/lund7tbids/: __init__.py  bids_util.py  create_derivs.py  create_pymp2rage.py  fix_anat.py  fix_bids_tree.py  fix_fmap.py  fix_other.py  main_bids_validator.py  main_fix_bids.py  main_import_dicoms.py  main_make_bids.py  main_mp2rage.py  main_rm_file.py  pipeline.py  task_runner.py  tools.py
python/lund7tbids/lib/pymp2rage/pymp2rage/: mp2rage.py  utils.py
shell/: 7Tbids_dicom2bids.sh  7Tbids_import_step2.sh  7Tbids_import_step2_old.sh  7Tbids_sort_dicoms.sh  7Tbids_validate_docker.sh  DcmDicomdir_to_DcmSourcedata.sh
