[metadata]
name = lund7tbids
version = 0.1.0

[options]
packages = find:
package_dir=
    =python

[options.packages.find]
where=python

[options.entry_points]
console_scripts = 
    7Tbids_import_dicoms = lund7tbids.main_import_dicoms:main
    7Tbids_dicom2bids = lund7tbids.main_make_bids:main
    7Tbids_validate = lund7tbids.main_bids_validator:main
    7Tbids_fix_bids = lund7tbids.main_fix_bids:main
    7Tbids_remove = lund7tbids.main_rm_file:main